# r2-test

./: Cargo.toml  Readme.md  gensecret.sh  readme.md
r2-workers/: package-lock.json  package.json  wrangler.toml
r2-workers/src/: index.ts
src/: main.rs
