[package]
name = "cloudflare-r2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
fern = "*"
tokio = { version = "1", features = ["full"] }
aws-config = "0.11.0"
aws-sdk-s3 = "0.11.0"
serde = {version = "*", features = ["derive"]}
serde_json = "*"
dotenv = "*"